# pdf-password-remover

./: .gitignore  README.md  WASM_SETUP.md  assets-manifest.json  eslint.config.js  eslint.config.mjs  index.html  jest.config.mjs  manifest.json  package-lock.json  package.json  pdf-remover.js  pdf-remover.wasm  playwright.config.js  service-worker.js  test-pdfium.mjs  test-wasm.js
.config/rspack/: rspack.common.mjs  rspack.dev.mjs  rspack.prod.mjs
.config/tests/: setupTests.js
.github/: copilot-instructions.md
.github/workflows/: README.md  build.yml  (+5 more)
assets/: manifest.webmanifest
e2e/: app.spec.js
public/: index.html  manifest.json  pdf-remover.js  pdf-remover.wasm
src/: App.jsx  App.module.css  App.test.jsx  index.jsx
src/wasm/: .gitignore  CMakeLists.txt  README.md  bindings.cpp  build.sh  pdf-handler.cpp
static/: 255.0a3a875d235a37c5.js  258.b714721386ef7bc9.js  325.b1f1ce09e96efca1.js  325.e2e8f2c38ee94d3e.js  462.49383df6e4c6f5dc.js  463.3253f49fb70e2ddb.js  612.caa03dadf6f52fcf.js  663.7bfe12b90ae7a028.js  680.48abe49975f1014c.js  911.f172cb674ba4ec05.js  980.57384fb704cc3d46.js  main.0014fe53e20f17a7.js  main.100af4b6a31f8740.css  main.1c7c26d2d0820d9b.js  main.1ca8bdbcd8ca2b01.js  main.21187dc13336505e.js  main.2b90ae0eccef675e.js  main.32bb86d737a50c12.css  main.3cbc66ce6fbd4b7d.css  main.418457134cdf1cf3.js  main.503941b45215464e.js  main.60f99b2345009cd2.js  main.915181a7fa8f3624.css  main.ad82133189cb95e4.js  main.bcd0800136ddcbc6.js  main.c087f515e4afc16a.js  main.ddfb9c59d296ae38.js  main.e52ebac5a32d5d7a.js  main.f327a43095200d49.js
(+17 files in other folders)
